--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,7 +15,7 @@ SET(TITLE_NAME vfkaps)
 SET(CPACK_PACKAGE_CONTACT "Mike Rossiter")
 
 SET(VERSION_MAJOR "0")
-SET(VERSION_MINOR "5")
+SET(VERSION_MINOR "6")
 
 #SET(CMAKE_BUILD_TYPE Debug)
 SET( wxWidgets_USE_DEBUG OFF)
@@ -26,17 +26,30 @@ SET( wxWidgets_USE_STATIC OFF)
 INCLUDE("cmake/PluginConfigure.cmake")
 
 SET(SRC_vfkaps
-        src/vfkaps_pi.h
-        src/vfkaps_pi.cpp
-        src/icons.h
-        src/icons.cpp
-		src/vfkapsgui.h
-	    src/vfkapsgui.cpp
-	    src/vfkapsgui_impl.cpp
-	    src/vfkapsgui_impl.h
-	    src/vfkapsOverlayFactory.cpp
-        src/vfkapsOverlayFactory.h
-	    src/ocpn_plugin.h
+        	src/vfkaps_pi.h
+        	src/vfkaps_pi.cpp
+        	src/icons.h
+        	src/icons.cpp
+			src/vfkapsgui.h
+	    	src/vfkapsgui.cpp
+	    	src/vfkapsgui_impl.cpp
+	    	src/vfkapsgui_impl.h
+	    	src/vfkapsOverlayFactory.cpp
+        	src/vfkapsOverlayFactory.h
+	    	src/ocpn_plugin.h
+			src/tinyxml.cpp
+			src/tinyxml.h
+			src/tinyxmlerror.cpp
+			src/tinyxmlparser.cpp
+
+        	src/wxJSON/jsonval.cpp
+        	src/wxJSON/jsonreader.cpp
+			src/wxJSON/jsonwriter.cpp
+		
+			src/wx/json_defs.h
+			src/wx/jsonval.h
+        	src/wx/jsonreader.h
+			src/wx/jsonwriter.h
 	)
 
 
