--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -28,7 +28,7 @@ set(PACKAGE "vfkaps")
 set(VERSION_MAJOR "2")
 set(VERSION_MINOR "1")
 set(VERSION_PATCH "1")
-set(VERSION_TWEAK "5")
+set(VERSION_TWEAK "6")
 set(VERSION_DATE "09/07/2020")
 set(OCPN_MIN_VERSION "ov50")
 set(OCPN_API_VERSION_MAJOR "1")
@@ -52,7 +52,7 @@ set(CLOUDSMITH_USER "opencpn")
 # set this if your cloudsmith repository name does not match your git repository name set(CLOUDSMITH_BASE_REPOSITORY "testplugin_pi")
 set(CLOUDSMITH_BASE_REPOSITORY "vfkaps")
 
-set(XML_INFO_URL "https://opencpn.org/wiki/dokuwiki/doku.php?id=opencpn:opencpn_user_manual:plugins:charts:vfkaps&s[]=vfkaps")
+set(XML_INFO_URL "https://opencpn.org/wiki/dokuwiki/doku.php?id=opencpn:opencpn_user_manual:plugins:charts:vfkaps")
 set(XML_SUMMARY "Produce KAP charts from downloaded satellite images")
 set(XML_DESCRIPTION "Download and install KAP charts from VentureFarther.com")
 
