--- a/flatpak/org.opencpn.OpenCPN.Plugin.vfkaps.yaml
+++ b/flatpak/org.opencpn.OpenCPN.Plugin.vfkaps.yaml
@@ -6,9 +6,9 @@
 #
 id: org.opencpn.OpenCPN.Plugin.vfkaps
 runtime: org.opencpn.OpenCPN
-runtime-version: stable
+runtime-version: beta
 #runtime-version: master   # for nightly builds
-sdk: org.freedesktop.Sdk//20.08
+sdk: org.freedesktop.Sdk//22.08
 build-extension: true
 separate-locales: false
 appstream-compose: false
