--- a/config.h.in
+++ b/config.h.in
@@ -1,3 +1,7 @@
+#ifndef CONFIG_H__
+#define CONFIG_H__
+
+
 #define API_VERSION       "@API_VERSION@"
 
 #define PLUGIN_VERSION_MAJOR @PROJECT_VERSION_MAJOR@
@@ -5,3 +9,15 @@
 #define PLUGIN_VERSION_PATCH @PROJECT_VERSION_PATCH@
 #define PLUGIN_VERSION_TWEAK @PROJECT_VERSION_TWEAK@
 
+#define PLUGIN_API_NAME "@PLUGIN_API_NAME@"
+#define PKG_SUMMARY _("@PKG_SUMMARY@")
+static const char* const PKG_DESCRIPTION = _(R"""(@PKG_DESCRIPTION@)""");
+
+#define PLUGIN_VERSION_TWEAK @PROJECT_VERSION_TWEAK@
+
+#define PKG_PRERELEASE "@PKG_PRERELEASE@"
+#define PKG_BUILD_INFO "@pkg_vers_build_info@"
+
+#define PLUGIN
+
+#endif //CONFIG_H__
